# funnelweb

./: .gitignore  Cargo.toml  README.md
funnelweb/: Cargo.toml
funnelweb-config/: Cargo.toml  README.md
funnelweb-config/src/: lib.rs
funnelweb-config/src/snapshots/: funnelweb_config__test__basic.snap
funnelweb-config/test_data/: basic.toml
funnelweb-imap/: Cargo.toml  README.md
funnelweb-imap-widget/: Cargo.toml  README.md
funnelweb-imap-widget/src/: connection.rs  connections.rs  lib.rs
funnelweb-imap/src/: command.rs  lib.rs
funnelweb/src/: main.rs
